# NexusRecon

./: .env.example  .gitignore  2026-05-21-160305-local-command-caveatcaveat-the-messages-below.txt  ARCHITECTURE.md  BETA_TESTING_GUIDE.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  EXECUTION_PLAN_V2_GOLD_STANDARD.md  EXECUTION_PLAN_V3_UX_POLISH.md  INSTALL_FIX_PLAN.md  ITERATION_BACKLOG.md  MANUAL.md  Makefile  NOTICE  OPSEC_STATUS.md  PHASE_E_EXECUTION_PLAN.md  README.md  ROADMAP.md  SECURITY.md  TESTING_PLAN.md  TESTING_RUNBOOK.md  TOOLCHAIN_AND_PLUGIN_SDK_PLAN.md  docker-compose.yml  file::memory:?cache=shared  install.sh  pyproject.toml  requirements.txt  smoke_test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: live-drift.yml  test.yml
configs/: defaults.yaml  tools.yaml
docs/: IMPLEMENTATION_PLAN_METASPLOIT_OSINT.md  METASPLOIT_PLAN_AUDIT.md  TUI_DESIGN_SPEC.md  TUI_UPGRADE_PLAN.md  install-verification.md  killer-demo.md  obsidian.md
docs/demo/: RECORDING.md  nexusrecon.tape
examples/sample_run/: README.md  audit_excerpt.jsonl  dispatcher_trace.md  scope.yaml
examples/scopes/: aws_native_startup_completed_example.yaml  m365_enterprise_completed_example.yaml  minimal_seed.yaml  retail_vendor_sprawl_completed_example.yaml
nexusrecon/: __init__.py
nexusrecon/adversarial/: __init__.py  aggregator.py  inconsistency.py  poisoned_data.py  prompt_injection.py  tool_patterns.py
nexusrecon/agents/: __init__.py  base.py  cloud_identity.py  correlation.py  dynamic_dispatcher.py  evidence_auditor.py  master_reporter.py  phishing_drafter.py  planner.py  pretext_humint.py  recon_active.py  recon_passive.py  reporter.py  risk_analyst.py  vuln_correlator.py
nexusrecon/cli/: __init__.py  main.py
nexusrecon/core/: __init__.py  attribution.py  audit.py  avatar_hash.py  cache.py  campaign.py  campaign_runner.py  config.py  cost_tracker.py  credential_correlation.py  credential_harvester.py  entity_graph.py  graph_context.py  handle_ubiquity.py  identity_graph.py  identity_hygiene.py  linked_accounts.py  name_frequency.py  personal_handle_derivation.py  pretext_scoring.py  profile_fetcher.py  recent_activity.py  relationship_graph.py  reputation.py  run_health.py  scope.py  scoring.py  timeline_cluster.py  username_derivation.py
nexusrecon/crypto/: __init__.py  keys.py  receipt.py  signing.py
nexusrecon/docs/: AGENT_LOOP.md  REPORT_GUIDE.md
nexusrecon/export/: __init__.py  stix.py
nexusrecon/graph/: __init__.py  agent_executor.py  dynamic_dispatcher.py  nodes.py  state.py  workflow.py
nexusrecon/ingest/: __init__.py  csv_.py  nessus.py  nuclei.py  stix_in.py  types.py
nexusrecon/intent/: __init__.py  intent_parser.py  nl_planner.py  scope_builder.py
nexusrecon/models/: __init__.py  campaign.py  entities.py  findings.py  scope.py
nexusrecon/opsec/: __init__.py  context.py  profiles.py  proxy.py  rate_limiter.py  setup.py  useragent.py
nexusrecon/packs/: __init__.py  distribution.py  loader.py  manifest.py  marketplace.py  registry.py
nexusrecon/reports/: __init__.py  asset_inventory.py  attack_surface.py  cloud_posture.py  engine.py  executive_summary.py  full_report.py  maltego_export.py  obsidian_export.py  phishing_drafts.py  phishing_package.py  spear_phishing_intelligence.py
nexusrecon/sdk/: __init__.py  agent_scaffolder.py  citation_guard.py  policy_scaffolder.py  prompt_versioning.py  tool_scaffolder.py
nexusrecon/strategy/: __init__.py  bounded_agency.py  plan.py  planner.py  policy.py  simulation.py
nexusrecon/tools/: __init__.py  base.py  registry.py
nexusrecon/tui/: __init__.py  app.py  app.tcss  banner.py  command_palette.py  config_schema.py  env_editor.py  themes.py  wizard_helpers.py
nexusrecon/ui/: __init__.py  app.py
nexusrecon/verification/: __init__.py  adversarial.py  contradictions.py  corroboration.py  orchestrator.py  propagation.py
nexusrecon/vision/: __init__.py  backend.py  cost.py  extractor.py  preprocess.py
nexusrecon/watch/: __init__.py  actions.py  runner.py  sensors.py  severity.py  storage.py
packs/burp/: burp_xml.py  manifest.yaml
plugins/example/: README.md  my_tool.py
scripts/: migrate_state_to_living_graph.py  nexusrecon-verify.py  verify_install.sh
tests/fixtures/: __init__.py
tests/integration/: test_binary_tools.py  test_breach_tools.py  test_campaign.py  test_certdns_tools.py  test_cli.py  test_cloud_tools.py  test_code_tools.py  test_dehashed_hudsonrock_enhanced.py  test_dns_tools.py  test_email_identity_tools.py  test_intel_free_tools.py  test_intel_paid_tools.py  test_maigret_tool.py  test_mobile_pretext_tools.py  test_opsec_wire.py  test_personal_pivot_tool.py  test_subdomain_tools.py  test_tools_http.py  test_vuln_tools.py  test_wave_f_signal_quality_regression.py  test_web_nonbinary_tools.py
tests/live/: __init__.py  (+2 more)
(+338 files in other folders)
